# amigo_whole_body_controller

./: .editorconfig  .travis.yml  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  plot.py
action/: ArmTask.action
cmake_modules/: Findfcl.cmake
data/: cone.dae
include/: AdmittanceController.h  CartesianImpedance.h  Chain.h  ChainParser.h  CollisionAvoidance.h  Component.h  ComputeJacobian.h  ComputeNullspace.h  Constraint.h  ConstructChain.h  JointLimitAvoidance.h  JointTrajectoryAction.h  MotionObjective.h  ObstacleAvoidance.h  PostureControl.h  ReferenceGenerator.h  RobotState.h  Tree.h  TreeDescription.h  WholeBodyController.h  vwmclient.h
include/amigo_whole_body_controller/: Tracing.hpp  wbc_node.h  world.h  worldclient.h
include/amigo_whole_body_controller/interfaces/: JointTrajectoryAction.h  RobotInterface.h
include/amigo_whole_body_controller/motionobjectives/: CartesianImpedance.h  CollisionAvoidance.h  JointLimitAvoidance.h  MotionObjective.h
include/vwm/: vwm_tools.h  vwmclient.h  vwmobject.h
launch/: depend_only.launch  middleware.launch  start.launch  start_depend_only.launch  viz.launch  wire_volume.launch
msg/: WholeBodyControllerStatus.msg
parameters/: admittance_control.yaml  chain_description.yaml  chain_description_test.yaml  collision_avoidance.yaml  collision_model.yaml  collision_model_primitive_shapes_model.yaml  collision_model_skeleton_model.yaml  component_description.yaml  component_description_test.yaml  joint_limit_avoidance.yaml  joint_trajectory_action.yaml  parameters.yaml  posture_control.yaml
scripts/: CarryingPose.py  Grasp.py  PreGrasp.py  PublishTargetPose.py  PublishTargetPoseLeft.py  PublishTargetPoseRight.py  Reset.py  TestCartesianMotionObjective.py  TestCartesianMotionObjectiveRobot.py  liveprofile  liveprofile.py
src/: AdmittanceController.cpp  CartesianImpedance.cpp  Chain.cpp  ChainParser.cpp  CollisionAvoidance.cpp  Component.cpp  ComputeJacobian.cpp  ComputeNullspace.cpp  Constraint.cpp  ConstructChain.cpp  JointLimitAvoidance.cpp  JointTrajectoryAction.cpp  MotionObjective.cpp  ObstacleAvoidance.cpp  PostureControl.cpp  ReferenceGenerator.cpp  RobotState.cpp  Tracing.cpp  Tree.cpp  WholeBodyController.cpp  conversions.cpp  conversions.h  main.cpp  vwmclient.cpp  wbc_node.cpp  whole_body_controller_node.cpp  world.cpp  worldclient.cpp
src/collision_detection/: edworld.cpp  edworld.h  octomapworld.cpp  octomapworld.h  world.cpp  world.h
src/interfaces/: JointTrajectoryAction.cpp  RobotInterface.cpp
src/motionobjectives/: CartesianImpedance.cpp  CollisionAvoidance.cpp  JointLimitAvoidance.cpp  MotionObjective.cpp  PostureControl.cpp
src/vwm/: vwmclient.cpp  vwmobject.cpp
