<?xml version="1.0"?>
<package>
  <name>amigo_whole_body_controller</name>
  <version>0.0.0</version>
  <description>The amigo_whole_body_controller package</description>

  <maintainer email="ramon@todo.todo">ramon</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>amigo_msgs</build_depend>
  <build_depend>amigo_ref_interpolator</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>code_profiler</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geolib_fcl</build_depend>
  <build_depend>geometry_msgs</build_depend>
<!--   <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>kdl_parser</build_depend> -->
  <build_depend>octomap</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tue_gazebo_plugins</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>amigo_msgs</run_depend>
  <run_depend>amigo_ref_interpolator</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>
  <run_depend>bullet</run_depend>
  <run_depend>code_profiler</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geolib_fcl</run_depend>
  <run_depend>geometry_msgs</run_depend>
<!--   <run_depend version_gte="1.3.0">orocos_kdl</run_depend>
  <run_depend>kdl_parser</run_depend> -->
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tue_gazebo_plugins</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>